src/objects/FailedSpareParts__c.object
<CustomObject>
    <fields>
        <fullName>CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>故障备件</relationshipLabel>
        <relationshipName>CASE11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultSparePartName__c</fullName>
        <label>故障备件名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <label>维护建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solve__c</fullName>
        <label>解决结果</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cause__c</fullName>
        <label>故障原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>solution__c</fullName>
        <label>解决方案</label>
        <type>TextArea</type>
    </fields>
    <label>故障备件</label>
    <nameField>
        <label>备件 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>故障备件</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>